Include appbase js in index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <title>Sign up</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="main.js"></script>
+    <script src="bower_components/appbase-js/browser/appbase.js"></script>
+
     <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 
@@ -20,7 +22,7 @@
     <div class="container">
         <section class="register">
             <h1>Appbase demo signup</h1>
-            <form method="post" action="index.html">
+            <form method="post" action="#">
                 <div class="reg_section personal_info">
                     <input type="text" name="fullname" value="" placeholder="Your full name">
                     <input type="text" name="email" value="" placeholder="Your E-mail Address">
