--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script> <!-- load jquery via CDN -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Sign up</title>
+    <title>Sendgrid Demo with Appbase</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="main.js"></script>
     <script src="bower_components/appbase-js/browser/appbase.js"></script>
